# pydantic_spaceapi

./: LICENSE  Makefile  README.md  pyproject.toml
.github/: renovate.json
.github/workflows/: release.yaml  tests.yaml
pydantic_spaceapi/: v14.py
pydantic_spaceapi/v13/: __init__.py  sensors.py
tests/: test_v13.py
tests/examples/: valid_v13.json
