[project]
name = "pydantic-spaceapi"
version = "0.2.0"
description = "Pydantic types for the SpaceAPI spec"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic-extra-types>=2.10.5"]

[dependency-groups]
dev = ["pytest>=8.4.1", "ruff>=0.12.9"]
github = ["pytest-github-actions-annotate-failures>=0.3.0"]

[tool.ruff]
ignore = ["E501"]
